[package]
name = "nedis"
authors = ["Florian Buestgens <fb@fx-ttr.de>"]
keywords = ["security", "fuzzer", "bruteforce", "dirbuster"]
repository = "https://github.com/fxttr/nedis"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "BSD-2-Clause"
description = "Brute forcing web directories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.7", features = ["derive"]}
futures = "0.3.24"